[SPARK-YARN-CLIENT] Add SparkLauncher migration guide and update README
MIGRATION.md: step-by-step migration from SparkLauncher to SparkYarnClient
with before/after code, API mapping table, fat JAR build config (Maven
shade + Gradle shadow), Kerberos migration, and a checklist.

README.md updates:
- Fat JAR mode section with full maven-shade-plugin example
- hdfsUri now optional in SparkYarnConfig reference table
- hdfsJarUploadDir auto-computed from HDFS home directory
- addFile/addArchive/addJar in SparkJobConfig reference
- Link to MIGRATION.md
- Tests section updated for Testcontainers/Docker

Co-Authored-By: Claude Sonnet 4.6 <noreply@anthropic.com>